Update README.md
Updated the section on using the event bus.